# cprintf

./: .gitignore  .hgignore  .ycm_extra_conf.py  CMakeLists.txt  License.txt  README.md  cprintf.cpp  cprintf.py  cprintf_examples.cpp  cprintf_examples.py  example.cpp  introduction-to-c_printf.txt
base/incl/: _cpf_common.h  _cpf_parse.h  c_printf.h  colour_repr.h  common.h  parse.h
base/incl/internal/: _cpf_colour_defs.h  _cpf_common.h  _cpf_config.h  _cpf_find.h  _cpf_sys_colour_config.h  _cpf_type.h  _cpf_types.h  _cpf_verify.h  cpf_find.h
base/incl/user/: _cpf_parse.h  _cpf_type_norm.h  c_printf.h
base/src/: _cpf_colour_defs.cpp  _cpf_config.cpp  _cpf_find.cpp  _cpf_format_verifier.cpp  _cpf_parse.cpp  _cpf_sys_colour_config.cpp  _cpf_type_norm.cpp  _cpf_verify.cpp  c_printf.cpp  colour_repr.cpp  parse.cpp
cprintf/: cprintf.h
docs/: License.txt  introduction-to-cprintf.txt
gtest/: CMakeLists.txt
incl/: c_printf.h  colour_repr.h  common.h  type_norm.h
incl/c_printf/: _cpf_parse.h  c_printf.h
incl/c_printf/internal/: _cpf_colour_defs.h  _cpf_common.h  _cpf_config.h  _cpf_parse.h  _cpf_type.h  _cpf_type_norm.h  _cpf_verify.h
incl/cprintf/: cprintf.h  cprintf.hpp
incl/cprintf/internal/: _cpf_colour_defs.h  _cpf_common.h  _cpf_config.h  _cpf_find.h  _cpf_parse.h  _cpf_type.h  _cpf_type_norm.h  _cpf_verify.h  cpf_base.h  cpf_carg.h  cpf_cdef.h  cpf_dbgh.h  cpf_dbgh.inc  cpf_hlpr.h  cpf_scan.h  cpf_srch.h  cpf_tconf.h  cpf_type.h
incl/user/: _cpf_parse.h
include/c_printf/: _cpf_parse.h  _cpf_type_norm.h  c_printf.h
include/c_printf/internal/: _cpf_verify.h
py/: CMakeLists.txt  bind_impl.py  binding.py  cprintf.py  gen_lib.py
python/: CMakeLists.txt  example.py
python/interface/: cpf_binding.py  cprintf.py
sample/: arg.cpp  colour.cpp  cursor.cpp  escape.cpp  misc.cpp
smpl/args/: main.cpp
smpl/colr/: main.cpp
smpl/curs/: main.cpp
smpl/escp/: main.cpp
smpl/misc/: main.cpp
src/: _cpf_colour_defs.cpp  _cpf_config.cpp  _cpf_find.cpp  _cpf_parse.cpp  _cpf_type_norm.cpp  _cpf_verify.cpp  c_printf.cpp  colour_repr.cpp  cpf_carg.cpp  cpf_cdef.cpp  cpf_scan.cpp  cpf_srch.cpp  cpf_tconf.cpp  cprintf.cpp  main.cpp  parse.cpp  type_norm.cpp
src/smpl/args/: main.cpp
src/smpl/misc/: main.cpp
test/: .ycm_extra_conf.py  CMakeLists.txt
test/src/: main.cpp
test_c_printf/: CMakeLists.txt
test_c_printf/incl/: cpf_test_common.h
test_c_printf/src/: block_space_token.cpp  colour_token.cpp  cursor_position.cpp  debug_c_printf.cpp  format.cpp  main.cpp  tag_token.cpp
